Tools/TestWebKitAPI/PlatformUtilities.h
@@ -28,6 +28,7 @@
 
 #include <WebKit2/WebKit2.h>
 #include <WebKit2/WKRetainPtr.h>
+#include <wtf/Platform.h>
 #include <string>
 
 namespace TestWebKitAPI {
@@ -35,6 +36,10 @@ namespace Util {
 
 // Runs a platform runloop until the 'done' is true. 
 void run(bool* done);
+
+#if PLATFORM(WIN)
+bool shouldTranslateMessage(const MSG&);
+#endif
 
 void sleep(double seconds);
 
